--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'java'
 }
 
+def neo4jVersion = "3.5.12"
 group 'org.example'
 version '1.0-SNAPSHOT'
 
@@ -12,5 +13,6 @@ repositories {
 }
 
 dependencies {
+    compile "org.neo4j:neo4j:${neo4jVersion}"
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
